# fmi

./: .gitignore  CMakeLists.txt  README.md  environ  mkdocs.yml  pyproject.toml  requirements.txt  setupenv
CPP/: .clang-format  CMakeLists.txt  README.md  setupenv
CPP/OOP/: CMakeLists.txt  README.md
CPP/OOP/Book of problems/: README.md
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task1/: task1.cpp
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task2/: task2.cpp
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task3/: task3.cpp
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task4/: task4.cpp
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task5/: main.cpp
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task6/: main.cpp
CPP/OOP/Book of problems/Part 1/1. Defining and using structures/task7/: main.cpp
CPP/OOP/Book of problems/Part 2/Additional tasks/: tasks
CPP/OOP/Book of problems/Part 2/Additional tasks/3.Pointers to objects/: tasks
CPP/OOP/Book of problems/Part 2/Additional tasks/5.Destructors/: tasks
CPP/OOP/Book of problems/Part 2/Additional tasks/6.Friend func and classes/: tasks
CPP/OOP/Book of problems/Part 2/Additional tasks/7.Operators/: tasks
CPP/OOP/Book of problems/Part 2/Additional tasks/8.Canonical representation/: tasks
CPP/OOP/Book of problems/Part 2/Additional tasks/task8/: main.cpp
CPP/OOP/Book of problems/Part 2/Additional tasks/task9/: main.cpp
CPP/OOP/Book of problems/Part 2/Canonical representation/task49/: task49.cpp
CPP/OOP/Book of problems/Part 2/Classes.Objects/task2/: task2.cpp
CPP/OOP/Book of problems/Part 2/Classes.Objects/task3/: task3.cpp
CPP/OOP/Book of problems/Part 2/Classes.Objects/task4/: task4.cpp
CPP/OOP/Book of problems/Part 2/Classes.Objects/task6/: task6.cpp
CPP/OOP/Book of problems/Part 2/Classes.Objects/task8/: task8.cpp
CPP/OOP/Book of problems/Part 2/Classes.Objects/task9/: task9.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task11/: task11.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task12/: task12.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task14/: task14.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task17/: task17.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task18/: task18.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task19/: task19.cpp
CPP/OOP/Book of problems/Part 2/Constructors/task20/: myTask20.cpp
CPP/OOP/Book of problems/Part 2/Dynamic objects.Destructors/task27/: task27.cpp
CPP/OOP/Book of problems/Part 2/Dynamic objects.Destructors/task28/: task28.cpp
CPP/OOP/Book of problems/Part 2/Dynamic objects.Destructors/task29/: task29.cpp
CPP/OOP/Book of problems/Part 2/Dynamic objects.Destructors/task31/: task31.cpp
CPP/OOP/Book of problems/Part 3/1. Derived classes/: README.md  task1.cpp  task3.cpp  task4.cpp  task5.cpp
CPP/OOP/Book of problems/Part 4/1.Multriple inheritance/: task1.cpp
CPP/OOP/Book of problems/Part 4/1.Multriple inheritance/task4/: Car.h  (+6 more)
CPP/OOP/Book of problems/Solutions/: readme.txt
CPP/OOP/Book of problems/Solutions/Chapter1/: zad01.cpp  zad08.cpp  zad10.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad18.cpp  zad19.cpp
CPP/OOP/Book of problems/Solutions/Chapter2/: zad04-1.cpp  zad04-2.cpp  zad07.cpp  zad08.cpp  zad09.cpp  zad10.cpp  zad11.cpp  zad12-1.cpp  zad12-2.cpp  zad13.cpp  zad16.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad24.cpp  zad27.cpp  zad29.cpp  zad31.cpp  zad32.cpp  zad37.cpp  zad39.cpp  zad40.cpp  zad41-a.cpp  zad42-b.cpp  zad43.cpp  zad44.cpp  zad45.cpp  zad46.cpp  zad47.cpp  zad49.cpp  zad50.cpp  zad52.cpp  zad55.cpp
CPP/OOP/Book of problems/Solutions/Chapter3/: zad03.cpp  zad06.cpp  zad07.cpp  zad08.cpp  zad10.cpp  zad14.cpp  zad16.cpp  zad17.cpp  zad21.cpp  zad23.cpp  zad24-b.cpp
CPP/OOP/Book of problems/Solutions/Chapter4/: zad01.cpp  zad02.cpp  zad04.cpp  zad05.cpp  zad07.cpp  zad08.cpp  zad10.cpp  zad13.cpp  zad15.cpp  zad17.cpp  zad18.cpp  zad20.cpp  zad22.cpp  zad24.cpp  zad25.cpp
CPP/OOP/Book of problems/Solutions/Chapter5/: zad02.cpp  zad05.cpp  zad06.cpp  zad08.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad18.cpp  zad22.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad29.cpp  zad30.cpp  zad32.cpp  zad33.cpp  zad35.cpp  zad36.cpp  zad39.cpp
CPP/OOP/String/: CMakeLists.txt
CPP/OOP/String/inc/: String.h
CPP/OOP/String/src/: String.cpp
CPP/OOP/String/test/: test.cpp
CPP/STL/: CMakeLists.txt
CPP/STL/Algorithms/: CMakeLists.txt
CPP/STL/Algorithms/Graph algorithms/: Algorithms.cpp  Algorithms.h  BFS1  test.cpp
CPP/STL/Algorithms/Tree algorithms/: CMakeLists.txt
CPP/STL/Algorithms/Tree algorithms/inc/: TreeAlgorithms.h
CPP/STL/Algorithms/Useful array algorithms/: Array_algs.cpp  Array_algs.h
CPP/STL/Containers/: CMakeLists.txt
CPP/STL/Containers/Container adaptors/: CMakeLists.txt
CPP/STL/Containers/Container adaptors/Stack/: CMakeLists.txt
CPP/STL/Containers/Graph/: CMakeLists.txt
CPP/STL/Containers/Graph/Linked/: CMakeLists.txt
CPP/STL/Containers/Graph/Trees/: CMakeLists.txt  test_utils.hpp
CPP/STL/Containers/Sequence containers/: CMakeLists.txt
CPP/STL/Containers/Sequence containers/DLList/: CMakeLists.txt
CPP/STL/Iterators/Sequence iterator/: Iterator.cpp  Iterator.h
CPP/STL/Iterators/Trees iterators/: Iterator.cpp  Iterator.h  Position.cpp  README.md
CPP/Utils/: CMakeLists.txt  Utils.cpp
CPP/cmake/: formatter.cmake  linter.cmake  run.py
stl/Containers/Container adaptors/PQueue/: CMakeLists.txt
stl/Containers/Container adaptors/PQueue/inc/: PQueue.h
stl/Containers/Container adaptors/PQueue/test/: test.cpp
stl/Containers/Graph/Linked/GMatrix/: CMakeLists.txt
stl/Containers/Graph/Trees/AVL/: CMakeLists.txt
stl/Containers/Sequence containers/SLList/: CMakeLists.txt
stl/Containers/Sequence containers/Vector/: CMakeLists.txt
stl/Containers/Sequence containers/Vector/inc/: Vector.h
stl/Containers/Sequence containers/Vector/src/: Iterator.cpp  Vector.hpp
stl/Containers/Sequence containers/Vector/test/: test.cpp
(+1003 files in other folders)
